# gcode-listener

./: .gitignore  Example.gcode  README.rst  main.py  pyproject.toml
src/: controller.py  main.py
src/design/: main.ui
